--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mysql2": "^3.9.2",
     "openai": "^4.28.0"
   },
   "devDependencies": {
