--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mysql2": "^3.9.2",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
